# AdvanceProg

./: .gitignore  README.md  docker-compose.yml  service.yaml
docs/: ARCHITECTURE.md  DEMOS.md  INSTALLATION.md  USER_GUIDE.md
mobile-app/: .dockerignore  Dockerfile.app  app.json  beutifulErrors.txt  package-lock.json  package.json
mobile-app/app/: _layout.js  index.js  login.js  signup.js
mobile-app/app/drive/: _layouts.js  all.js  my-drive.js  recent.js  shared-with-me.js  starred.js  trash.js
mobile-app/app/file/: [id].js
mobile-app/app/image/: [id].js
mobile-app/components/: BottomBar.tsx  DriveScreen.js  FileDisplay.js  Navbar.js
mobile-app/components/FileDisplay/: PlusModal.tsx  index.tsx  styles.ts
mobile-app/components/Sidebar/: Sidebar.js  SidebarButton.js
mobile-app/context/: RefreshContext.js
mobile-app/styles/: login.styles.js  signup.styles.js  themes.js
mobile-app/utilities/: ThemeContext.js  api.js
react-native-app/: package-lock.json  package.json
react-native-app/app/: test-drive-display.tsx  test-menu.tsx
react-native-app/app/(tabs)/: _layout.tsx  index.tsx
react-native-app/components/BoxFileItem/: index.tsx  styles.ts
react-native-app/components/FileActionModal/: index.tsx  styles.ts
react-native-app/components/FileDisplay/: index.tsx  styles.ts
react-native-app/components/FilePreview/: index.tsx  styles.ts
react-native-app/components/ListBoxFileItems/: styles.ts
react-native-app/components/ListFileItems/: index.tsx
react-native-app/components/ListLineFileItems/: index.tsx  styles.ts
react-native-app/components/MoveFileModal/: index.tsx  styles.ts
react-native-app/utilities/: api.js  roles.js
src/Client/: CLIManager.cpp  CLIManager.h  CMakeLists.txt  Client.cpp  Client.h  Client.py  Dockerfile.cppClient  Dockerfile.pyClient  IInput.h  IOutput.h  main.cpp
src/File_Server/: CMakeLists.txt  Dockerfile.server
src/File_Server/Commands/: AddCommand.cpp  AddCommand.h  DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  ICommand.h  SearchCommand.cpp  SearchCommand.h
src/File_Server/Compressor/: IStringCompressor.h  RLECompressor.cpp  RLECompressor.h
src/File_Server/Executor/: CreateThreadExecutor.cpp  CreateThreadExecutor.h  Executor.h  FixedThreadPool.cpp  FixedThreadPool.h  Runnable.h
src/File_Server/FileManager/: Exceptions.cpp  Exceptions.h  FileManager.cpp  FileManager.h  IFileManager.h
src/File_Server/IOAdapters/: ClientConnectionManager.cpp  ClientConnectionManager.h  ICommandParser.h
src/File_Server/Main/: HandleClient.cpp  HandleClient.h  Server.cpp  Server.h  main.cpp
src/Web_Server/: Dockerfile.server  app.js  package-lock.json  package.json
src/Web_Server/controllers/: fileController.js  searchController.js  tokenController.js  userController.js
src/Web_Server/models/: File.js  FileDir.js  Permission.js  User.js  fileModel.js  userModel.js
src/Web_Server/routes/: fileRoutes.js  searchRoutes.js  tokenRoutes.js  userRoutes.js
tests/: CMakeLists.txt
tests/part2/: Dockerfile.tests  Integration_test_ClientConnectionManager.cpp  e2e.cpp  unit_CreateThreadExecutor.cpp  unit_DeleteCommand.cpp  unit_client.cpp  unit_fileMan.cpp  unit_tests_ClientConnectionManager.cpp
web-app/: Dockerfile.app  package-lock.json  package.json
web-app/public/: index.html
web-app/src/: App.css  App.js  index.js
(+106 files in other folders)
